Fixed Large Icon Mobile

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ nav{
 }
 
 .logo{
-    height: 14vh;
+    height: 8vh;
 }
 
 #sticky{
